# stella-garbage-collector

./: CMakeLists.txt  README.md
src/: garbage_collector.cpp  garbage_collector.h  gc.h  runtime.c  runtime.h
